--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -8,13 +8,13 @@
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 #jdbc.username=jeesite
 #jdbc.password=123456
-
+ 
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.1.51:3306/jeesite?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 
 #mssql database settings
 #jdbc.type=mssql
